--- a/css/vars.less
+++ b/css/vars.less
@@ -18,7 +18,8 @@
 @mobileNormal: ~"(max-width: 720px)";
 @mobile750px: ~"(max-width: 750px)";
 @mobileAvg: ~"(max-width: 797px)"; // Переменная для написания медиа запросов. (tablet)
-@mobile: ~"(max-width: 808px)"; // Переменная для написания медиа запросов. (tablet)
+@mobile: ~"(max-width: 808px)"; 
+@mobile867px: ~"(max-width: 867px)"; 
 @mobileBig: ~"(max-width: 885px)"; // Переменная для написания медиа запросов. (tablet)
 @mobile910px: ~"(max-width: 910px)";
 @mobile980px: ~"(max-width: 980px)";
