--- a/css/blocks/modal-work.less
+++ b/css/blocks/modal-work.less
@@ -26,6 +26,8 @@
     & {
       width: 100%;
       height: 370px;
+      border-top-right-radius: 2.3rem;
+      border-top-left-radius: 2.3rem;
     }
   }
 
