--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -17,7 +17,6 @@
 }
 
 .about__inner {
-  //Разбиваем photo и content на 2 ровные части
   display: flex;
 
   @media @mobile {
@@ -28,7 +27,7 @@
 }
 
 .about__photo {
-  flex-basis: 50%; //Аналогично что и width: 50%;
+  flex-basis: 50%;
   position: relative;
 
   @media @tablet {
@@ -73,7 +72,7 @@
 }
 
 .about__content {
-  flex-basis: 50%; //Аналогично что и width: 50%;
+  flex-basis: 50%;
   padding: 2.66rem 1rem;
 
   @media @mobile {
