--- a/css/blocks/container.less
+++ b/css/blocks/container.less
@@ -1,9 +1,8 @@
 // main: ../style.less
 
-/* Создаем нашу сетку выравнивания */
 .container {
-  width: 100%; /* Занимает 100% ширины */
-  max-width: 1200px; /* Максимальная ширина 1170px - меняем на 1200px (30px)*/
-  margin: 0 auto; /* Выравниваем по центру */
-  padding: 0 1rem; /* Чтобы контент не прилипал к краям при адаптации */
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
