--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -61,9 +61,9 @@
 .modal__dialog {
   position: relative;
   border-radius: 2.3rem;
-  width: 100%; //Ширина 100%, в max-width указываем какая именно максимальная ширина будет.
-  max-width: 1200px; //Максимальная ширина 1200px, чтобы модальное окно при сужении не вылазило за экран, было адаптивным.
-  margin: auto; //Выровняли по центру по горизонтали и вертикали
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
   background-color: @white;
 }
 
