--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -143,7 +143,7 @@
     & {
       position: absolute;
       width: 350px;
-      max-width: 100%; // Расположили по центру картинку в полном её размере в маленький квадрат. Адаптивно.
+      max-width: 100%;
     }
   }
 
