--- a/css/blocks/social.less
+++ b/css/blocks/social.less
@@ -1,7 +1,7 @@
 // main: ../style.less
 
 .social {
-  display: flex; /* Переворачиваем наши блоки .social__link */
+  display: flex;
   margin-bottom: 42px;
 
   @media @mobile {
@@ -11,8 +11,8 @@
   }
 
   &__link {
-    /* Цельный ссылочный блок, оболочка */
-    display: flex; /* Делаем флэксами наши ссылки чтобы менять их размер и так далее */
+
+    display: flex; 
     justify-content: center;
     align-items: center;
     border: 1px solid @black;
