--- a/css/blocks/user.less
+++ b/css/blocks/user.less
@@ -19,14 +19,14 @@
 
 .user__name {
   margin-bottom: 3px;
-  font-size: 1.06rem; /* Размер текста 1.06rem (16px) */
+  font-size: 1.06rem;
   font-weight: 700;
   color: @black;
-  line-height: 1.2; /* Межстрочный отступ имени. 18px/15px = 1.2rem */
+  line-height: 1.2;
 }
 
 .user__prof {
-  font-size: 0.8rem; /* 15px/12px = 0.8rem */
+  font-size: 0.8rem;
   font-weight: 400;
-  color: fade(@black, 70%); /* fade - аналог rgba (70% непрозрачность) */
+  color: fade(@black, 70%);
 }
