--- a/css/blocks/works.less
+++ b/css/blocks/works.less
@@ -32,12 +32,11 @@
 }
 
   &:after {
-    //Создаем нашу линию подчеркивания у навигации работ
     position: absolute;
     content: "";
-    width: 0; //Изначально ширина 0%
+    width: 0;
     height: 2px;
-    right: 0; //Когда убираем курсор с ссылки, исчезает слева-направо (Откуда заканчиваем)
+    right: 0;
     bottom: -5px;
     background: @black;
     transition: 0.2s linear;
@@ -45,14 +44,14 @@
   }
 
   &:hover:after {
-    left: 0; //При наведении полоса начнет двигаться(появляться) слева-направо (Откуда начинаем)
-    width: 100%; //При наведении ширина = 100%
+    left: 0;
+    width: 100%;
   }
 
   & span {
     font-size: 20px;
     font-weight: 300;
-    transition: all 0.1s linear; //Скорость жирности текста
+    transition: all 0.1s linear;
     color: @black;
 
     @media @mobile605px {
@@ -61,19 +60,17 @@
         }
     }
   }
-  //Это таймер последовательного ожирения текста
+
   & span:nth-child(2) {
-    //Таким образом выбрали второй элемент (букву, для нее время ожидания .1s)
-    transition-delay: 0.1s; //Устанавливает время ожидания перед запуском эффекта (Второй спустя 0.1s и т.д)
+
+    transition-delay: 0.1s;
   }
 
   & span:nth-child(3) {
-    //Задаем таймер ожирения текста, для каждой буквы
     transition-delay: 0.2s;
   }
 
   & span:nth-child(4) {
-    //При наведении последовательно ожиряет текст,при уводе утончает с первого элемента(.1s)
     transition-delay: 0.3s;
   }
 
@@ -106,8 +103,7 @@
   }
 
   &:hover span {
-    //А это уже эффект при наведении
-    font-weight: 700; //При наведении на span(текст ссылок) увеличивать жирность до bold
+    font-weight: 700;
   }
 
   &:hover {
