--- a/css/vars.less
+++ b/css/vars.less
@@ -7,25 +7,24 @@
 @radius: 20px;
 
 /* Media */
-
 @mobile405px: ~"(max-width: 405px)";
 @mobile471px: ~"(max-width: 471px)";
-@mobileSmall: ~"(max-width: 485px)"; // Переменная для написания медиа запросов. (tablet)
+@mobileSmall: ~"(max-width: 485px)"; 
 @mobile560px: ~"(max-width: 560px)";
 @mobile605px: ~"(max-width: 605px)";
 @mobile620px: ~"(max-width: 620px)";
 @mobile698px: ~"(max-width: 698px)";
 @mobileNormal: ~"(max-width: 720px)";
 @mobile750px: ~"(max-width: 750px)";
-@mobileAvg: ~"(max-width: 797px)"; // Переменная для написания медиа запросов. (tablet)
+@mobileAvg: ~"(max-width: 797px)"; 
 @mobile: ~"(max-width: 808px)"; 
 @mobile867px: ~"(max-width: 867px)"; 
-@mobileBig: ~"(max-width: 885px)"; // Переменная для написания медиа запросов. (tablet)
+@mobileBig: ~"(max-width: 885px)"; 
 @mobile910px: ~"(max-width: 910px)";
 @mobile980px: ~"(max-width: 980px)";
 @tablet1040px: ~"(max-width: 1040px)";
-@tablet: ~"(max-width: 1199px)"; // Переменная для написания медиа запросов. (laptopTab)
-@laptopTwo: ~"(max-width: 1284px)"; // Переменная для написания медиа запросов. (laptopTab)
+@tablet: ~"(max-width: 1199px)"; 
+@laptopTwo: ~"(max-width: 1284px)"; 
 @laptopThree: ~"(max-width: 1400px)";
-@laptop: ~"(max-width: 1679px)"; // Переменная для написания медиа запросов. (laptop)
+@laptop: ~"(max-width: 1679px)";
 @fullHd1920px: ~"(max-width: 1920px)";
