--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -116,7 +116,7 @@
     color: @white;
   }
 
-  &:not(:last-child) { // Ко всем кроме последнего элемента
+  &:not(:last-child) {
     margin-right: 0.66rem;
   }
 
@@ -206,7 +206,7 @@
       transition: all 0.2s linear;
     }
     &:hover::before {
-      opacity: 1; /* При наведении на нашу иконку показываем цвет градиент, чтобы был плавный */
+      opacity: 1;
     }
   }
   &--six:hover {
@@ -255,11 +255,3 @@
   fill: @gray-light;
   transition: all 0.2s linear;
 }
-
-/* React JS */
-/* React.js плюсы:
-- Хорошая производительность, поскольку он основан на виртуальной модели DOM.
-- Его компоненты можно повторно использовать в разных частях приложения.
-- Большое сообщество постоянно развивается и делает фреймворк стабильным.
-- Он универсален и может использоваться с любыми фреймворками.
-- Односторонний поток данных. */
