--- a/css/blocks/modal-work.less
+++ b/css/blocks/modal-work.less
@@ -1,7 +1,5 @@
 // main: ../style.less
 
-/* Делаем одно отдельное модальное окно, так как оно отличается от других структурой, будем делать его отдельно */
-
 .modal-work {
   display: flex;
   border-radius: 2.3rem;
@@ -59,11 +57,11 @@
 
 .modal-work__photo {
   position: absolute;
-  left: 50%; //Поставили картинку посередине
-  top: 50%; //Поставили картинку посередине
+  left: 50%;
+  top: 50%;
   z-index: 1;
 
-  transform: translate3d(-50%, -50%, 0); //Выравниваем фотографию по центру.
+  transform: translate3d(-50%, -50%, 0);
 
   width: 100%;
   height: 100%;
