--- a/css/blocks/user.less
+++ b/css/blocks/user.less
@@ -2,16 +2,15 @@
 
 .user {
   display: flex;
+  align-items: center;
 }
 
-.user__avatar {
-  width: 57px;
-  height: 57px;
-
-  img {
+.user__avatar__img {
+    width: 57px;
+    height: 57px;
     border-radius: 50%;
+    
   }
-}
 
 .user__content {
   margin-left: 9px;
