--- a/css/blocks/user.less
+++ b/css/blocks/user.less
@@ -5,11 +5,13 @@
   align-items: center;
 }
 
+.user__avatar {
+}
+
 .user__avatar__img {
-    width: 57px;
-    height: 57px;
+    width: 90px;
+    height: 80px;
     border-radius: 50%;
-    
   }
 
 .user__content {
